# english_words_learning_bot

./: .gitignore  docker-compose.yml  fake_db.py  generate_grade_words.py  make_dictionary.py  pyproject.toml  raw_words.txt  test_raw_words.txt  words.json
db/: 01_run_generate_data_script.sh  Dockerfile  data.sql  dict_copy.json  dictionary.json  docker-compose.yml  generate_data.py  len_dict.py  schema.sql
english_words_learning_bot/: bot.py  config.py  database.py  keyboards.py  training.py  utils.py
english_words_learning_bot/edu_tools/: params_training.py  training.py  utils.py
english_words_learning_bot/handlers/: __init__.py  general.py  learn.py  settings.py  start.py  stats.py
english_words_learning_bot/middlewares/: last_activity_middleware.py
